# pyLHD

./: .gitignore  404.html  LICENSE  README.md  REFERENCES.md  _publish.yml  _quarto.yml  _sidebar.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
_site/: README.qmd  REFERENCES.html  index.html  robots.txt  search.json  sitemap.xml
_site/docs/: OLHD.OLHD_Butler01.html  OLHD.OLHD_Cioppa07.html  OLHD.OLHD_Lin09.html  (+60 more)
base-designs/: index.html
criteria/: index.html
docs/: LHD-optimize.md  OLHD.OLHD_Butler01.qmd  OLHD.OLHD_Cioppa07.qmd  OLHD.OLHD_Lin09.qmd  OLHD.OLHD_Sun10.qmd  OLHD.OLHD_Ye98.qmd  OLHD.md  _quarto.yml  _sidebar.yml  base-designs.md  base.GLPdesign.qmd  base.GoodLatticePoint.qmd  base.LatinSquare.qmd  base.permutations_matrix.qmd  base.random_lhd.qmd  base_designs.GLPdesign.qmd  base_designs.permutations_matrix.qmd  base_designs.rLHD.qmd  base_designs.random_lhd.qmd  criteria.AvgAbsCor.qmd  criteria.Criteria.qmd  criteria.LqDistance.qmd  criteria.MaxAbsCor.qmd  criteria.MaxProCriterion.qmd  criteria.coverage.qmd  criteria.dij.qmd  criteria.discrepancy.qmd  criteria.eval_design.qmd  criteria.inter_site.qmd  criteria.maximin.qmd  criteria.md  criteria.mesh_ratio.qmd  criteria.phi_p.qmd  helpers.OA2LHD.qmd  helpers.adjust_range.qmd  helpers.distance_matrix.qmd  helpers.eval_design.qmd  helpers.exchange.qmd  helpers.lapply.qmd  helpers.permute_columns.qmd  (+20 more)
notebooks/: intro_pyLHD.ipynb
pyLHD/: LHD_optim.py  OLHD.py  __init__.py  base.py  base_designs.py  criteria.py  hadamard.py  helpers.py  maximin.py  misc.py  optimizers.py  orthogonal.py  projections.py  simulated_annealing_LHD.py  utils.py
reference/: index.qmd
tests/: test_GLP.py  test_OLHD.py  test_criteria.py  test_discrepancy.py  test_hadamard.py  test_helpers.py
utils/: index.html
(+169 files in other folders)
